# bitbazaar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamlfmt  404.html  CONTRIBUTING.md  README.md  biome.json  bitbazaar.code-workspace  etch.config.yml  index.html  mkdocs.yml  objects.inv  opencollector.yaml  opencollector.yaml.zetch  pyproject.toml  pyrightconfig.json  python_autodoc.py  release.yml  release.yml.zetch  sitemap.xml  zetch.config.toml
.github/actions/install-python/: action.yml
.github/actions/install-redis/: action.yml
.github/actions/install-rust/: action.yml
.github/workflows/: py-rust-build.yml  release.yml  release.yml.zetch  tests.yml  whos-changed.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
dev_scripts/: docker.sh  docs.sh  initial_setup.sh  pkg.sh  process.sh  py_rust.sh  run.sh  test.sh  utils.sh  zj.sh
dev_scripts/_internal/: wait_for_upstreams.py
dev_scripts/_scr_setup/: setup.sh
docs/: index.md  pyproject.toml  python_autodoc.py
etches/: CONTRIBUTING.md  README.md
js/: .eslintrc.cjs  README.md  build_standalone_cdn_log.js  bun.lockb  bunfig.toml  package-lock.json  package.json  tsconfig.etch.json  tsconfig.json  tsconfig.zetch.json  tsup.config.ts  vitest.config.ts
js/bitbazaar/: index.ts
js/tests/: basic.test.ts  happydom.ts
js_ref/: index.html
js_ref/assets/: highlight.css  navigation.js  search.js
js_ref/classes/: log.GlobalLog.html
js_ref/functions/: color.createSteppedScale.html  index.hello.html  utils.add.html  utils.assertNever.html  utils.genPath.html  vite.createConfig.html  wouter.route.html  wouter.routeParams.html  wouter.routes.html
js_ref/interfaces/: vite.TopViteConfig.html
js_ref/modules/: color.html  index.html  log.html  utils.html  vite.html  wouter.html
js_ref/types/: log.LogLevel.html  wouter.RouteConfig_T.html  wouter.RouteParamsOutput_T.html
js_ref/variables/: log.LOG.html  utils.areTestsRunning.html
prettier/: package-lock.json  package.json  prettier.config.cjs
py/: README.md  bandit.yml  pyproject.toml
py/bitbazaar/: __init__.py  _testing.py  utils.py
py/bitbazaar/log/: __init__.py  _exporters.py  _file_handler.py  _formatting.py  _global_log.py  _utils.py
py/bitbazaar/misc/: __init__.py  _std_capture.py
py/bitbazaar/testing/: __init__.py  _tmp_file_manager.py
py/bitbazaar/tracing/: __init__.py  _exporters.py  _file_handler.py  _filterables.py  _formatting.py  _global_log.py  _setup.py  _utils.py
py/bitbazaar/utils/: __init__.py
py/tests/: conftest.py  test_basics.py  test_version.py
py/tests/bb_testing/: test_tmp_file_manager.py
py/tests/log/: log_generics.py  test_log.py
py/tests/misc/: test_std_capture.py
py/tests/tracing/: test_tracing.py  trace_generics.py
py_ref/: index.html
py_ref/SUMMARY/: index.html
py_ref/log/: index.html
py_ref/misc/: index.html
py_ref/testing/: index.html
py_ref/tracing/: index.html
py_ref/utils/: index.html
py_rust/: Cargo.toml  LICENSE.etch.md  LICENSE.md  README.md  pyproject.toml
py_rust/.config/: nextest.toml
py_rust/python/bitbazaar_rs/: __init__.py  __init__.pyi
py_rust/src/: lib.rs  prelude.rs
py_rust/src/utils/: add.rs  mod.rs
py_rust/tests/: test_basic.py  test_version.py
py_rust/tests/helpers/: utils.py
py_rust_ref/: index.html
py_rust_ref/SUMMARY/: index.html
py_rust_ref/utils/: index.html
rust/: Cargo.toml  README.md  build.rs
rust/.config/: nextest.toml
rust/benches/: bench_default.rs
rust/bitbazaar/: lib.rs  prelude.rs
rust/bitbazaar/chrono/: chrono_formatting.rs  mod.rs
rust/bitbazaar/cli/: bash.rs  bash_out.rs  builtins.rs  cli_logging.rs  cmd_err.rs  cmd_out.rs  errs.rs  mod.rs  redirect.rs  run_cmd.rs  runner.rs  shell.rs
rust/bitbazaar/cli/builtins/: cd.rs  echo.rs  exit.rs  mod.rs  pwd.rs  set.rs
rust/bitbazaar/command/: mod.rs  spawn_builder.rs
rust/bitbazaar/cookies/: cookies.rs  mod.rs
rust/bitbazaar/crypto/: aes256.rs  md5.rs  mod.rs  sha.rs
rust/bitbazaar/crypto/hash/: mod.rs  password.rs
rust/bitbazaar/encrypt/: encrypt.rs  mod.rs
rust/bitbazaar/errors/: any.rs  generic_err.rs  macros.rs  mod.rs  result_ext.rs  test_errs.rs  traced_error.rs
rust/bitbazaar/file/: chmod.rs  mod.rs
rust/bitbazaar/hash/: fnv1a.rs  mod.rs
rust/bitbazaar/log/: clap_log_level_args.rs  macros.rs  mod.rs  ot_tracing_bridge.rs  standalone_collector.rs  system_and_process_metrics.rs
rust/bitbazaar/log/global_log/: builder.rs  event_formatter.rs  exceptions.rs  global_fns.rs  mod.rs  out.rs  setup.rs
rust/bitbazaar/log/test_assets/: collector_config_example_grpc.yaml  collector_config_example_http.yaml
rust/bitbazaar/logging/: clap_log_level_args.rs  create_subscriber.rs  diff_file_log.rs  macros.rs  mod.rs  ot_tracing_bridge.rs  setup_logger.rs
rust/bitbazaar/logging/global_log/: mod.rs  out.rs  setup.rs
rust/bitbazaar/misc/: binary_search.rs  bytes.rs  flexi_logger.rs  global_lock.rs  in_ci.rs  is_tcp_port_listening.rs  lazy_batcher.rs  lazy_clone.rs  looper.rs  main_wrapper.rs  mod.rs  periodic_updater.rs  platform.rs  random.rs  random_bytes.rs  refreshable.rs  retry.rs  retry_backoff.rs  serde_migratable.rs  setup_once.rs  sleep_compat.rs  tarball.rs  time_compat.rs  timeout.rs  url_escape.rs
rust/bitbazaar/redis/: batch.rs  clear_namespace.lua  conn.rs  dlock.rs  fuzzy.rs  json.rs  mod.rs  mset_with_expiry.lua  redis_retry.rs  rval.rs  script.rs  standalone.rs  standalone_redis.rs  temp_list.rs  wrapper.rs
rust/bitbazaar/redis/lua_scripts/: backoff_protector.lua  mexists.lua
rust/bitbazaar/redis/pubsub/: channel_listener.rs  mod.rs  pubsub_global.rs
rust/bitbazaar/test/: fixtures.rs  mod.rs  test_utils.rs
rust/bitbazaar/testing/: fixtures.rs  mod.rs
rust/bitbazaar/threads/: batch_futures.rs  fut_runner.rs  mod.rs  run_cpu_intensive.rs
rust/bitbazaar/timing/: macros.rs  mod.rs  recorder.rs
rust/bitbazaar/utils/: add.rs
rust_ref/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
search/: search_index.json
zetches/: CONTRIBUTING.md  README.md
(+639 files in other folders)
