[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[project]
classifiers = ['Development Status :: 1 - Planning', 'Typing :: Typed', 'Operating System :: POSIX :: Linux', 'Operating System :: Microsoft :: Windows', 'Operating System :: MacOS', 'Programming Language :: Python', 'Programming Language :: Python :: Implementation :: CPython', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3 :: Only', 'Programming Language :: Python :: 3.11', 'Programming Language :: Python :: 3.12', 'License :: OSI Approved']
dependencies = []
description = 'An assortment of publicly available cross-language utilities useful to my projects.'
name = 'bitbazaar'
readme = 'README.md'
requires-python = '>=3.11'
version = '0.0.1'

[[project.authors]]
email = 'zakstucke@gmail.com'
name = 'Zachary Stucke'

[project.license]
text = 'MIT'

[project.urls]
Documentation = 'https://zakstucke.github.io/bitbazaar'
Sourcecode = 'https://github.com/zakstucke/bitbazaar'

[tool]

[tool.coverage]

[tool.coverage.paths]
source = ['bitbazaar/', '/Users/runner/work/bitbazaar/bitbazaar/bitbazaar/', '/home/runner/work/bitbazaar/bitbazaar/bitbazaar/', 'D:\a\bitbazaar\bitbazaar\bitbazaar']
tests = ['tests']

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = ['bitbazaar']

[tool.hatch]

[tool.hatch.build]

[tool.hatch.build.targets]

[tool.hatch.build.targets.sdist]
include = ['/README.md', '/LICENSE.md', '/bitbazaar', '/tests', '/requirements.txt']

[tool.hatch.metadata]
allow-direct-references = true

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = ['ipykernel>=6.25.2']
test = ['pyright>=1.1.329', 'pytest>=7.4.2', 'coverage[toml]>=7.3.2']

[tool.pyright]
deprecateTypingAliases = true
exclude = ['**/__pycache__', '**/.pytest_cache', '**/.pytype', '**/py_stubs', '**/venv', '**/.venv', '**/node_modules', '**/target', '**/migrations']
pythonVersion = '3.11'
reportImportCycles = true
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalCall = true
reportOptionalContextManager = true
reportOptionalIterable = true
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportPrivateImportUsage = false
reportTypedDictNotRequiredAccess = false
reportUnknownParameterType = true
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedExpression = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
stubPath = './py_stubs'
typeCheckingMode = 'basic'
useLibraryCodeForTypes = true
venv = '.venv'
venvPath = '.'
