[package]
name = "bitbazaar_rs"
version = "0.0.3"
edition = "2021"
readme = "README.md"
license = "MIT"
# This crate should only be released as a python package, so disable any rust side crates publishing:
publish = false

[lib]
name = "bitbazaar_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

# Add your dependencies here
[dependencies]
colored = '2'
tracing = "0.1"
error-stack = "0.4"

[dependencies.bitbazaar]
features = []
version = '0.0.20'

[dependencies.pyo3]
features = ['extension-module', 'chrono', 'generate-import-lib']
version = '0.20.0'

[profile.profiler]
inherits = "release"  # Adds on top of the default release profile
incremental = true
debug = true
strip = false

# Modifying the test runtime (from release is just so much faster)
[profile.test]
inherits = "release"  # Adds on top of the default release profile
