[package]
name = "bitbazaar"
description = "An assortment of publicly available cross-language utilities useful to my projects."
version = "0.0.28"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "bitbazaar"
crate-type = ["lib"]
path = "bitbazaar/lib.rs"

[features]
cli = ['dep:normpath', 'dep:conch-parser', 'dep:homedir']
redis = ['dep:deadpool-redis', 'dep:redis', 'dep:sha1_smol']
opentelemetry = [
  'dep:tracing-core',
  'dep:tracing-log',
  'dep:opentelemetry-appender-tracing',
  'dep:opentelemetry_sdk',
  'dep:tracing-opentelemetry',
  'dep:opentelemetry',
  'dep:opentelemetry-otlp',
  'dep:opentelemetry-semantic-conventions',
]

# Add your dependencies here
[dependencies]
parking_lot = { version = "0.12", features = ["deadlock_detection", "serde"] }
tracing = "0.1"
error-stack = "0.4"
chrono = '0.4'
colored = '2.0'
comfy-table = '7.1'
once_cell = '1.18'
regex = '1.10'
tracing-appender = '0.2'
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "time"] }
clap = { version = "4.4", features = ["derive", "string"] }
strum = { version = "0.25", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
hostname = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# FEAT: cli:
normpath = { version = '1.1', optional = true }
conch-parser = { version = "0.1.1", optional = true }
homedir = { version = "0.2", optional = true }

# FEAT: redis:
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"], optional = true }
redis = { version = "0.24", default-features = false, features = ["aio", "json"], optional = true }
sha1_smol = { version = "1.0", optional = true }

# FEAT: opentelemetry:
tracing-core = { version = "0.1", optional = true } # Only needed whilst we're using ot_tracing_bridge.rs
tracing-log = { version = "0.2", optional = true } # Only needed whilst we're using ot_tracing_bridge.rs
opentelemetry-appender-tracing = { version = "0.2.0", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", default-features = false, features = [
  "trace",
], optional = true }
opentelemetry-otlp = { version = "0.14", features = ["logs", "trace", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.13.0", optional = true }

[dev-dependencies]
rstest = "0.18"
portpicker = '0.1.1'
serial_test = '2.0'
tempfile = '3.8'
tokio = { version = '1.35', features = ["rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4"] }

[profile.profiler]
inherits = "release" # Adds on top of the default release profile
incremental = true
debug = true
strip = false

# Modifying the test runtime (from release is just so much faster)
[profile.test]
inherits = "release" # Adds on top of the default release profile
