[package]
name = "bitbazaar"
description = "An assortment of publicly available cross-language utilities useful to my projects."
version = "0.0.34"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "bitbazaar"
crate-type = ["lib", "cdylib"] # cdylib allows things like wasm to compile
path = "bitbazaar/lib.rs"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
# We use feature(doc_auto_cfg) so show which features needed for which code.
# For the features to show in docs.rs, need to tell it to include them:
all-features = true

[features]
log-filter = ["dep:regex"]
clap = ["dep:clap"]
timing = ['dep:comfy-table', 'dep:chrono']
cli = ['dep:normpath', 'dep:conch-parser', 'dep:homedir', 'dep:chrono', 'dep:strum']
redis = ['dep:deadpool-redis', 'dep:redis', 'dep:sha1_smol', 'dep:serde_json']
opentelemetry = [
  'dep:tracing-log',
  'dep:opentelemetry-appender-tracing',
  'dep:opentelemetry_sdk',
  'dep:tracing-opentelemetry',
  'dep:opentelemetry',
  'dep:opentelemetry-otlp',
  'dep:opentelemetry-semantic-conventions',
  'dep:http',
]
opentelemetry-grpc = ['opentelemetry', 'opentelemetry-otlp/grpc-tonic']
opentelemetry-http = [
  'opentelemetry',
  'opentelemetry-otlp/http-proto',
  'opentelemetry-otlp/reqwest-client',
]

# Add your dependencies here
[dependencies]
tracing = "0.1"
tracing-core = "0.1"
error-stack = "0.4"
once_cell = '1'
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "time"] }
parking_lot = { version = "0.12", features = ["deadlock_detection", "serde"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
colored = '2'

# Not in default, but randomly useful in features:
chrono = { version = '0.4', optional = true }
strum = { version = "0.25", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# FEAT: log-filter:
regex = { version = '1', optional = true }

# FEAT: clap:
clap = { version = "4.4", features = ["derive", "string"], optional = true }

# FEAT: timing:
comfy-table = { version = "7.1", optional = true }

# FEAT: cli:
normpath = { version = '1.1', optional = true }
conch-parser = { version = "0.1.1", optional = true }
homedir = { version = "0.2", optional = true }

# FEAT: redis:
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"], optional = true }
redis = { version = "0.24", default-features = false, features = ["aio", "json"], optional = true }
sha1_smol = { version = "1.0", optional = true }

# FEAT: opentelemetry:
tracing-log = { version = "0.2", optional = true } # Only needed whilst we're using ot_tracing_bridge.rs
http = { version = "1.0", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry-appender-tracing = { version = "0.2.0", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry = { version = "0.21", default-features = false, features = [
  "trace",
], optional = true }
opentelemetry-otlp = { version = "0.14", default-features = false, features = [
  "logs",
  "trace",
  "metrics",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.13.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber-wasm = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-appender = '0.2' # This includes threading (non-blocking stuff that can't be used in wasm)
hostname = "0.3.1"

[dev-dependencies]
rstest = "0.18"
portpicker = '0.1.1'
tempfile = '3.8'
tokio = { version = '1.35', features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.6", features = ["v4"] }

[profile.profiler]
inherits = "release" # Adds on top of the default release profile
incremental = true
debug = true
strip = false

# Modifying the test runtime (from release is just so much faster)
[profile.test]
inherits = "release" # Adds on top of the default release profile
